--- a/UserControls/Student/CRUDStudent.xaml
+++ b/UserControls/Student/CRUDStudent.xaml
@@ -63,16 +63,43 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="Managing Students Section" Grid.Row="1" FontSize="32" FontWeight="SemiBold" Margin="0 20 0 0" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="#121518"/>
 
-                <Button Grid.Column="1" Style="{StaticResource addButton}">
-                    <StackPanel Orientation="Horizontal">
+                <Button Grid.Column="1" Style="{StaticResource addButton}" x:Name="addStBtn" Click="addStBtn_Click" Content="Add">
+                    <!--<StackPanel Orientation="Horizontal">
                         <Icon:PackIconMaterial Kind="Plus" VerticalAlignment="Center" Width="11" Height="11" Margin="0 1 8 0"/>
-                        <TextBlock Text="Add New Member"/>
-                    </StackPanel>
+                        <TextBlock Text="Add New Student"/>
+                    </StackPanel>-->
                 </Button>
             </Grid>
 
-            <ScrollViewer Grid.Row="1">
+            <ScrollViewer Grid.Row="1" x:Name="addStudentForm" Visibility="Collapsed">
                 <UserControl x:Name="studentCC" />
+            </ScrollViewer>
+            <ScrollViewer Visibility="Visible" Grid.Row="1" x:Name="viewStudent">
+                <DataGrid x:Name="StudentDataGrid" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridCheckBoxColumn CanUserResize="False" Width="auto">
+                            <DataGridCheckBoxColumn.HeaderTemplate>
+                                <DataTemplate>
+                                    <CheckBox/>
+                                </DataTemplate>
+                            </DataGridCheckBoxColumn.HeaderTemplate>
+                        </DataGridCheckBoxColumn>
+                        <DataGridTemplateColumn Header="Operations" IsReadOnly="True" Width="auto">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button x:Name="editBtn" Click="editBtn_Click">
+                                            <Icon:PackIconMaterial Kind="PencilOutline" />
+                                        </Button>
+                                        <Button  Margin="5 0 0 0" x:Name="deleteBtn" Click="deleteBtn_Click">
+                                            <Icon:PackIconMaterial Kind="DeleteOutline" />
+                                        </Button>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
             </ScrollViewer>
 
 
