Student CRUD Operations Completed

--- a/UserControls/Student/CRUDStudent.xaml
+++ b/UserControls/Student/CRUDStudent.xaml
@@ -75,15 +75,8 @@
                 <UserControl x:Name="studentCC" />
             </ScrollViewer>
             <ScrollViewer Visibility="Visible" Grid.Row="1" x:Name="viewStudent">
-                <DataGrid x:Name="StudentDataGrid" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False">
+                <DataGrid x:Name="StudentDataGrid" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False">
                     <DataGrid.Columns>
-                        <DataGridCheckBoxColumn CanUserResize="False" Width="auto">
-                            <DataGridCheckBoxColumn.HeaderTemplate>
-                                <DataTemplate>
-                                    <CheckBox/>
-                                </DataTemplate>
-                            </DataGridCheckBoxColumn.HeaderTemplate>
-                        </DataGridCheckBoxColumn>
                         <DataGridTemplateColumn Header="Operations" IsReadOnly="True" Width="auto">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
