--- a/UserControls/Project/CRUDProjectUC.xaml
+++ b/UserControls/Project/CRUDProjectUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjectA.UserControls.Advisor.CRUDAdvisor"
+﻿<UserControl x:Class="ProjectA.UserControls.Project.CRUDProjectUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -61,7 +61,7 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Managing Advisors Section" Grid.Row="1" FontSize="32" FontWeight="SemiBold" Margin="0 20 0 0" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="#121518"/>
+                <TextBlock Grid.Column="0" Text="Managing Projects Section" Grid.Row="1" FontSize="32" FontWeight="SemiBold" Margin="0 20 0 0" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="#121518"/>
 
                 <Button Grid.Column="1" Style="{StaticResource addButton}" x:Name="addStBtn" Click="addStBtn_Click" Content="Add">
                     <!--<StackPanel Orientation="Horizontal">
@@ -71,11 +71,11 @@
                 </Button>
             </Grid>
 
-            <ScrollViewer Grid.Row="1" x:Name="addAdvisorForm" Visibility="Collapsed">
-                <UserControl x:Name="advisorCC" />
+            <ScrollViewer Grid.Row="1" x:Name="addProjectForm" Visibility="Collapsed">
+                <UserControl x:Name="projectCC" />
             </ScrollViewer>
-            <ScrollViewer Visibility="Visible" Grid.Row="1" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" x:Name="viewAdvisor">
-                <DataGrid x:Name="AdvisorDataGrid" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False">
+            <ScrollViewer Visibility="Visible" Grid.Row="1" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" x:Name="viewProject">
+                <DataGrid x:Name="ProjectDataGrid" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False">
                     <DataGrid.Columns>
                         <DataGridTemplateColumn Header="Operations" IsReadOnly="True" Width="auto">
                             <DataGridTemplateColumn.CellTemplate>
@@ -103,3 +103,4 @@
 
     </materialDesign:Card>
 </UserControl>
+
