--- a/UserControls/Evaluation/CRUDEvaluationUC.xaml
+++ b/UserControls/Evaluation/CRUDEvaluationUC.xaml
@@ -74,26 +74,45 @@
             <ScrollViewer Grid.Row="1" x:Name="addEvaluationForm" Visibility="Collapsed">
                 <UserControl x:Name="evaluationCC" />
             </ScrollViewer>
-            <ScrollViewer Visibility="Visible" Grid.Row="1" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" x:Name="viewEvaluation">
-                <DataGrid x:Name="EvaluationDataGrid" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False">
-                    <DataGrid.Columns>
-                        <DataGridTemplateColumn Header="Operations" IsReadOnly="True" Width="auto">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Horizontal">
-                                        <Button x:Name="editBtn" Click="editBtn_Click">
-                                            <Icon:PackIconMaterial Kind="PencilOutline" />
-                                        </Button>
-                                        <Button  Margin="5 0 0 0" x:Name="deleteBtn" Click="deleteBtn_Click">
-                                            <Icon:PackIconMaterial Kind="DeleteOutline" />
-                                        </Button>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </ScrollViewer>
+            <DataGrid Grid.Row="1" AutoGenerateColumns="False" x:Name="EvaluationDataGrid" IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" CanUserResizeColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTemplateColumn Header="Name" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Total Marks" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding TotalWeightage}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Total Weightage" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding TotalMarks}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Operations" IsReadOnly="True" Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button x:Name="editBtn" Click="editBtn_Click" BorderBrush="Transparent" Background="Transparent">
+                                        <Icon:PackIconMaterial Kind="PencilOutline" Foreground="Gray"/>
+                                    </Button>
+                                    <Button  Margin="5 0 0 0" x:Name="deleteBtn" BorderBrush="Transparent" Background="Transparent" Click="deleteBtn_Click">
+                                        <Icon:PackIconMaterial Kind="DeleteOutline" Foreground="Red"/>
+                                    </Button>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
 
 
 
