--- a/UserControls/Student/AddStudentUC.xaml
+++ b/UserControls/Student/AddStudentUC.xaml
@@ -169,57 +169,61 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Margin="15 0" Text="First Name" Style="{StaticResource text}"/>
-            <TextBlock Grid.Row="1" Grid.Column="0" Margin="15 0" Text="Last Name" Style="{StaticResource text}"/>
-            <TextBlock Grid.Row="2" Grid.Column="0" Margin="15 0" Text="Gender" Style="{StaticResource text}"/>
-            <TextBlock Grid.Row="3" Grid.Column="0" Margin="15 0" Text="Date of Birth" Style="{StaticResource text}"/>
-            <TextBlock Grid.Row="4" Grid.Column="0" Margin="15 0" Text="Contact" Style="{StaticResource text}"/>
-            <TextBlock Grid.Row="5" Grid.Column="0" Margin="15 0" Text="Email" Style="{StaticResource text}"/>
-            <TextBlock Grid.Row="6" Grid.Column="0" Margin="15 0" Text="Registeration Number" Style="{StaticResource text}"/>
+            <TextBlock Grid.Row="0" Grid.Column="0" Margin="15 0" Text="Registeration Number" Style="{StaticResource text}"/>
+            <TextBlock Grid.Row="1" Grid.Column="0" Margin="15 0" Text="First Name" Style="{StaticResource text}"/>
+            <TextBlock Grid.Row="2" Grid.Column="0" Margin="15 0" Text="Last Name" Style="{StaticResource text}"/>
+            <TextBlock Grid.Row="3" Grid.Column="0" Margin="15 0" Text="Gender" Style="{StaticResource text}"/>
+            <TextBlock Grid.Row="4" Grid.Column="0" Margin="15 0" Text="Date of Birth" Style="{StaticResource text}"/>
+            <TextBlock Grid.Row="5" Grid.Column="0" Margin="15 0" Text="Contact" Style="{StaticResource text}"/>
+            <TextBlock Grid.Row="6" Grid.Column="0" Margin="15 0" Text="Email" Style="{StaticResource text}"/>
+
 
 
             <Grid Grid.Row="0" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
-                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="Ali" Visibility="{Binding ElementName=txtFirstName,Path=Text.IsEmpty,Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="207" Visibility="{Binding ElementName=txtRegNo,Path=Text.Length,Converter={StaticResource BooleanToVisibilityConverter}}"/>
+
+                <TextBox x:Name="txtRegNo" Style="{StaticResource txtbox}"/>
+            </Grid>
+
+            <Grid Grid.Row="1" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
+                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="Ali" Visibility="{Binding ElementName=txtFirstName,Path=Text.Length,Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
                 <TextBox x:Name="txtFirstName" Style="{StaticResource txtbox}"/>
             </Grid>
 
-            <Grid Grid.Row="1" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
-                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="Ahmad" Visibility="{Binding ElementName=txtLastName,Path=Text.IsEmpty,Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <Grid Grid.Row="2" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
+                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="Ahmad" Visibility="{Binding ElementName=txtLastName,Path=Text.Length,Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
                 <TextBox x:Name="txtLastName" Style="{StaticResource txtbox}"/>
             </Grid>
 
 
-            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
-                <Button Margin="10 0" x:Name="maleBtn" Click="genderBtnClicked" Background="Purple">
+            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1">
+                <ComboBox x:Name="genderCB" Width="300" HorizontalAlignment="Left"/>
+                <!--<Button Margin="10 0" x:Name="maleBtn" Click="genderBtnClicked" Background="Purple">
                     <TextBlock Text="M" Foreground="#ffffff"/>
                 </Button>
                 <Button Margin="10 0" x:Name="femaleBtn" Click="genderBtnClicked" Background="MediumPurple">
                     <TextBlock Text="F" Foreground="#ffffff"/>
-                </Button>
+                </Button>-->
             </StackPanel>
 
-            <DatePicker Grid.Column="1" Grid.Row="3" Width="300" HorizontalAlignment="Left" x:Name="dobDatePicker" />
+            <DatePicker Grid.Column="1" Grid.Row="4" Width="300" HorizontalAlignment="Left" x:Name="dobDatePicker" />
 
 
-            <Grid Grid.Row="4" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
-                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="000-000-000" Visibility="{Binding ElementName=txtContact,Path=Text.IsEmpty,Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <Grid Grid.Row="5" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
+                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="000-000-000" Visibility="{Binding ElementName=txtContact,Path=Text.Length,Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
                 <TextBox x:Name="txtContact" Style="{StaticResource txtbox}"/>
             </Grid>
 
-            <Grid Grid.Row="5" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
-                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="abc@abc.com" Visibility="{Binding ElementName=txtEmail,Path=Text.IsEmpty,Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <Grid Grid.Row="6" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
+                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="abc@abc.com" Visibility="{Binding ElementName=txtEmail,Path=Text.Length,Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
                 <TextBox x:Name="txtEmail" Style="{StaticResource txtbox}"/>
             </Grid>
 
-            <Grid Grid.Row="6" Grid.Column="1" Width="400"  HorizontalAlignment="Left">
-                <TextBlock VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False" Panel.ZIndex="1" Text="207" Visibility="{Binding ElementName=txtRegNo,Path=Text.IsEmpty,Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
-                <TextBox x:Name="txtRegNo" Style="{StaticResource txtbox}"/>
-            </Grid>
 
             <Grid Grid.Column="1" Grid.Row="7" Margin="0 40 0 0">
                 <Grid.ColumnDefinitions>
