assign project working

--- a/UserControls/Advisor/AssignAdvisorUC.xaml
+++ b/UserControls/Advisor/AssignAdvisorUC.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:ProjectA.UserControls.Student"
              mc:Ignorable="d" 
              d:DesignWidth="830"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+             xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              TextElement.FontWeight="Regular"
              TextElement.FontSize="13"
